versioned_docs/version-8.9/self-managed/upgrade/helm/890-to-8100.md
---
id: 890-to-8100
sidebar_label: Upgrade 8.9 to 8.10
title: Upgrade Camunda 8.9 to 8.10 using Helm
description: Upgrade a Camunda 8 Self-Managed deployment from version 8.9 to 8.10 using Helm, including the required Helm v4 CLI switch and the deprecated application configuration Helm keys that move to extraConfiguration.
toc_max_heading_level: 4
---

import { HelmChartValuesFileBitnamiLegacyLink } from "@site/src/components/CamundaDistributions";

Upgrade a Helm-managed Camunda 8 Self-Managed deployment from version 8.9 to 8.10.

:::info Upgrade procedure
All Camunda 8 upgrades must follow the required upgrade procedure: upgrade to the latest patch of your current minor first, then upgrade one minor version at a time without skipping minors. Skipping a minor version fails the schema compatibility check and blocks startup. Upgrading to the latest patch of each minor is strongly recommended for fix coverage, but the check itself compares minor versions.

See [version compatibility checks](/self-managed/components/orchestration-cluster/core-settings/concepts/version-compatibility.md#required-upgrade-procedure).
:::

:::warning Helm v4 CLI is required
Camunda 8.10 (chart 15.x) requires the Helm v4 CLI. Switch your tooling to the Helm v4 CLI before you run `helm upgrade`. Chart 14.x (8.9) already supports Helm v4, so you can switch while still on 8.9. No release-state migration is required when switching CLIs. See [Move from the Helm v3 CLI to v4](/self-managed/deployment/helm/operational-tasks/moving-helm-v3-to-v4.md).
:::

## Prerequisites

Before upgrading, ensure you have met the following prerequisites:

| Prerequisite                | Description                                                                                                                                                                                                                                                                                                                       |
| :-------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Confirm `8.9.x` baseline    | Confirm your deployment is running an `8.9.x` version before upgrading to 8.10. If you are upgrading from a version earlier than 8.9, upgrade one minor at a time. See [Upgrade Helm chart](/self-managed/upgrade/helm/index.md). Upgrading to the latest available `8.9.x` patch first is strongly recommended for fix coverage. |
| Switch to the Helm v4 CLI   | Camunda 8.10 (chart 15.x) requires the Helm v4 CLI. See [Move from the Helm v3 CLI to v4](/self-managed/deployment/helm/operational-tasks/moving-helm-v3-to-v4.md).                                                                                                                                                               |
| Confirm upgrade eligibility | Review [Prepare for upgrade](/self-managed/upgrade/prepare-for-upgrade.md) to confirm upgrade eligibility and complete any required pre-upgrade actions for 8.10.                                                                                                                                                                 |
| Confirm Helm chart support  | Review the Camunda Helm chart [version matrix](https://helm.camunda.io/camunda-platform/version-matrix/) and confirm the chart version deploying 8.10 is supported for your Kubernetes and Helm client versions.                                                                                                                  |
| Backups                     | Create and verify backups for your Camunda data. See [Backup and restore](/self-managed/operational-guides/backup-restore/backup-and-restore.md).                                                                                                                                                                                 |
| Check your `values.yaml`    | Review your existing `values.yaml` for the [deprecated application configuration Helm keys](#deprecated-application-configuration-helm-keys) that move to `extraConfiguration` in 8.10.                                                                                                                                           |
| Test upgrade                | Test the upgrade in a non-production environment using a copy of your production configuration.                                                                                                                                                                                                                                   |

## Run the Camunda Helm Toolkit

Run the [Camunda Helm Toolkit](/self-managed/deployment/helm/operational-tasks/camunda-helm-toolkit.md) against your existing 8.9 overrides as the recommended first step. The toolkit migrates and validates supported override-file changes and flags known follow-up actions. It doesn't cover changes that require picking between multiple valid targets, such as the Console/Web Modeler-to-Camunda-Hub consolidation.

1. Create `values-8.10.yaml` from your existing overrides. Copy the original file, or migrate it with the toolkit using source `8.9` and target `8.10`.
1. Review the report: keys the toolkit migrated automatically, findings that need manual review, and warnings or validation errors.
1. For each finding, go to the matching section under [Apply manual configuration changes](#apply-manual-configuration-changes), for example the [deprecated application configuration Helm keys](#deprecated-application-configuration-helm-keys) reference below.

A clean toolkit result isn't proof your deployment is ready to upgrade. The toolkit doesn't upgrade your deployment, migrate stored data, or validate a live cluster. Continue with the manual changes, rendering, and validation steps below.

## Apply manual configuration changes

Use this reference for the changes the toolkit doesn't automate, or to look up a specific finding from its report. You don't need to read every section if the toolkit found no matching keys in your overrides.

### Deprecated application configuration Helm keys

In chart 15.x (8.10), Helm keys that acted as thin proxies for a single application setting are being deprecated in favor of the component's `extraConfiguration`. These keys continue to work in 8.10: setting one to a non-default value logs a `[camunda][warning] DEPRECATION` message on `helm install` or `helm upgrade`. They are planned for removal in a later major chart version, so migrating them while on 8.10 keeps your values file ready for that removal.

:::note Deprecations are still being added
Camunda 8.10 is under active development, and more keys may be deprecated across its release cycle. The tables below cover the keys deprecated at the time of writing; treat the `[camunda][warning] DEPRECATION` messages emitted by your own `helm upgrade` as the authoritative, up-to-date list for your chart version. Each message names the deprecated key and where to configure it instead.
:::

`extraConfiguration` lets each component own its native application configuration file. Its format (an ordered list of file entries, mounted and imported via `spring.config.import` for Spring Boot components) is unchanged from 8.9. For how it works per component, exclusion of non-Spring files with `springImport: false`, and how to find the exact application property for a given setting, see [Application configuration and `extraConfiguration`](/self-managed/deployment/helm/configure/application-configs.md#how-extraconfiguration-works-per-component). The most reliable way to find a target property name is to [generate the component's default configuration file](/self-managed/deployment/helm/configure/application-configs.md#step-2-generate-the-default-configuration-file) and locate the equivalent property there.

For the deprecated keys below, the chart resolves the effective value from your `extraConfiguration` (and, for the document store, suppresses the generated environment variables) so your migrated configuration takes effect in 8.10. You do not need to remove the deprecated key at the same time; if both are set, the `extraConfiguration` value takes precedence.

Each deprecated key moves to the listed component's `extraConfiguration`, except where noted.

#### Orchestration

Move these keys to `orchestration.extraConfiguration`.

| Deprecated key                                                                                                                                    | Notes                                                                                                                                                                                                                                                                                                                                                   |
| :------------------------------------------------------------------------------------------------------------------------------------------------ | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| `orchestration.logLevel`                                                                                                                          | Root/log level in the app config or a `log4j2.xml` entry.                                                                                                                                                                                                                                                                                               |
| `orchestration.log4j2`                                                                                                                            | Move to a file-content `extraConfiguration` entry (`log4j2.xml`) with `springImport: false`. See [excluding files from `spring.config.import`](/self-managed/deployment/helm/configure/application-configs.md#excluding-files-from-springconfigimport).                                                                                                 |
| `orchestration.cpuThreadCount`, `orchestration.ioThreadCount`                                                                                     | `camunda.system.cpu-thread-count`, `camunda.system.io-thread-count`.                                                                                                                                                                                                                                                                                    |
| `orchestration.partitionCount`, `orchestration.replicationFactor`                                                                                 | `camunda.cluster.partition-count`, `camunda.cluster.replication-factor`. Immutable after the first install; do not change on upgrade.                                                                                                                                                                                                                   |
| `orchestration.data.snapshotPeriod`                                                                                                               | `camunda.data.snapshot-period`.                                                                                                                                                                                                                                                                                                                         |
| `orchestration.data.disk.freeSpace.{processing,replication}`                                                                                      | `camunda.data.primary-storage.disk.free-space.{processing,replication}`.                                                                                                                                                                                                                                                                                |
| `orchestration.index.prefix`                                                                                                                      | Sets two properties: `camunda.data.secondary-storage.<elasticsearch\|opensearch>.index-prefix` and `zeebe.broker.exporters.camundaexporter.args.connect.indexPrefix`. If you set only one, the exporter and readers use different prefixes.                                                                                                             |
| `orchestration.index.replicas`                                                                                                                    | `camunda.data.secondary-storage.<elasticsearch\|opensearch>.number-of-replicas`.                                                                                                                                                                                                                                                                        |
| `orchestration.history.retention.{enabled,minimumAge,policyName}`                                                                                 | `camunda.data.secondary-storage.retention.{enabled,minimum-age}` and `...<db>.history.policy-name`.                                                                                                                                                                                                                                                     |
| `orchestration.history.{delayBetweenRuns,maxDelayBetweenRuns,rolloverBatchSize,rolloverInterval,waitPeriodBeforeArchiving,elsRolloverDateFormat}` | `zeebe.broker.exporters.camundaexporter.args.history.*`.                                                                                                                                                                                                                                                                                                |
| `orchestration.retention.{enabled,minimumAge,policyName}`                                                                                         | `zeebe.broker.exporters.<elasticsearch\|opensearch>.args.retention.*` (Zeebe record index).                                                                                                                                                                                                                                                             |
| `orchestration.security.authentication.unprotectedApi`                                                                                            | `camunda.security.authentication.unprotectedApi`. Cannot be `true` together with multi-tenancy checks. See [Troubleshooting](#multi-tenancy-with-an-unprotected-api).                                                                                                                                                                                   |
| `orchestration.security.authentication.oidc.{usernameClaim,clientIdClaim,groupsClaim,preferUsernameClaim,scope}`                                  | `camunda.security.authentication.oidc.{username-claim,client-id-claim,groups-claim,prefer-username-claim,scope}`.                                                                                                                                                                                                                                       |
| `orchestration.security.authentication.oidc.backwardsCompatibleAudiences`                                                                         | `camunda.security.authentication.oidc.audiences`. This replaces the audience list. See [Troubleshooting](#backwards-compatible-audiences-replace-the-audience-list).                                                                                                                                                                                    |
| `orchestration.security.authentication.authenticationRefreshInterval`                                                                             | `camunda.security.authentication.oidc.authenticationRefreshInterval`.                                                                                                                                                                                                                                                                                   |
| `orchestration.security.authorizations.enabled`                                                                                                   | `camunda.security.authorizations.enabled`.                                                                                                                                                                                                                                                                                                              |
| `orchestration.security.initialization.mappingRules`                                                                                              | `camunda.security.initialization.mapping-rules`.                                                                                                                                                                                                                                                                                                        |
| `orchestration.security.initialization.authorizations`                                                                                            | `camunda.security.initialization.authorizations`. The permission list field is `permissions`, not `permissionTypes`. See [Troubleshooting](#initialization-authorizations-report-no-permissiontypes-provided).                                                                                                                                          |
| `orchestration.multitenancy.checks.enabled`, `orchestration.multitenancy.api.enabled`                                                             | `camunda.security.multiTenancy.checksEnabled`, `camunda.security.multiTenancy.apiEnabled`.                                                                                                                                                                                                                                                              |
| `orchestration.exporters.camunda.enabled`                                                                                                         | `camunda.data.secondary-storage.autoconfigure-camunda-exporter`.                                                                                                                                                                                                                                                                                        |
| `orchestration.exporters.zeebe.replicas`                                                                                                          | `zeebe.broker.exporters.<elasticsearch\|opensearch>.args.index.numberOfReplicas`.                                                                                                                                                                                                                                                                       |
| `orchestration.security.authentication.oidc.redirectUrl`                                                                                          | Base redirect URL that sets three OIDC properties: `camunda.security.authentication.oidc.redirect-uri` (`<base>/sso-callback`), `camunda.operate.identity.redirectRootUrl` (`<base>/operate`), and `camunda.tasklist.identity.redirectRootUrl` (`<base>/tasklist`). If you set only one, the login callback, Operate, and Tasklist use different hosts. |
| `orchestration.upgrade.allowPreReleaseImages`                                                                                                     | `camunda.system.upgrade.enable-version-check` (inverted: `allowPreReleaseImages: true` maps to `enable-version-check: false`).                                                                                                                                                                                                                          |

#### Connectors

Move these keys to `connectors.extraConfiguration`.

| Deprecated key                                    | Notes                                   |
| :------------------------------------------------ | :-------------------------------------- |
| `connectors.logging.level."io.camunda.connector"` | `logging.level."io.camunda.connector"`. |

#### Optimize

Move these keys to `optimize.extraConfiguration`, except where noted. Entries marked `Native config` use Optimize's own configuration property names rather than the `camunda.*` namespace; set them in `optimize.extraConfiguration` as well.

| Deprecated key                                                                | Notes                                                                                                                                                                                                                                       |
| :---------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| `optimize.logLevel`, `optimize.upgradeLogLevel`, `optimize.esLogLevel`        | `logging.level.{"io.camunda.optimize","io.camunda.optimize.upgrade","org.elasticsearch"}`.                                                                                                                                                  |
| `optimize.profiles`                                                           | `spring.profiles.active`.                                                                                                                                                                                                                   |
| `optimize.caches.cloudTenantAuthorizations.{maxSize,minFetchIntervalSeconds}` | `camunda.optimize.caches.cloud-tenant-authorizations.{max-size,min-fetch-interval-seconds}`.                                                                                                                                                |
| `optimize.partitionCount`                                                     | Native config `zeebe.partitionCount`.                                                                                                                                                                                                       |
| `optimize.database.{elasticsearch,opensearch}.prefix`                         | Native config `zeebe.name`.                                                                                                                                                                                                                 |
| `optimize.multitenancy.enabled`                                               | Move to `global.multitenancy.enabled` (not `extraConfiguration`). This is a platform-wide switch that requires Identity with an external database. See [multi-tenancy](/self-managed/deployment/helm/configure/configure-multi-tenancy.md). |

#### Web Modeler

Move these keys to `webModeler.restapi.extraConfiguration`.

| Deprecated key                                                                             | Notes                                         |
| :----------------------------------------------------------------------------------------- | :-------------------------------------------- |
| `webModeler.restapi.mail.{fromAddress,fromName,smtpHost,smtpUser,smtpPort,smtpTlsEnabled}` | `camunda.modeler.mail.*` and `spring.mail.*`. |
| `webModeler.restapi.logging.level.{"io.camunda.modeler","io.grpc"}`                        | `logging.level.*`.                            |

#### Console

Console is a Node.js application that reads these settings from environment variables only, so migrate them to `console.env` (not `extraConfiguration`).

| Deprecated key           | Notes                             |
| :----------------------- | :-------------------------------- |
| `console.keycloak.realm` | `console.env` (`KEYCLOAK_REALM`). |
| `console.nodeEnv`        | `console.env` (`NODE_ENV`).       |
| `console.logging`        | `console.env`.                    |

#### Global

Move each key to the consuming component's `extraConfiguration`.

| Deprecated key                                         | Notes                                                                                                                                                                          |
| :----------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `global.config.requestBodySize`                        | The relevant `spring.servlet.multipart.*`, `server.tomcat.max-http-form-post-size`, and message-size properties per component.                                                 |
| `global.zeebeClusterName`                              | `zeebe.broker.cluster.clusterName` on the orchestration component.                                                                                                             |
| `global.documentStore.type.{aws,gcp,inmemory}.storeId` | The unified `camunda.document.*` config (`default-store-id` plus the store definition) on each document-consuming component. See [Troubleshooting](#custom-document-store-id). |

### Migrate `extraConfiguration` entries

The `extraConfiguration` value format is unchanged from 8.9. If you already use `extraConfiguration`, no format change is required for this upgrade. For the mechanics, per-component behavior, and a worked example of moving settings into a configuration file, see [Application configuration and `extraConfiguration`](/self-managed/deployment/helm/configure/application-configs.md).

The following condensed example shows the shape of the migration for the orchestration component.

```yaml
# Before (8.9, deprecated keys)
orchestration:
  logLevel: debug
  partitionCount: "3"
  data:
    snapshotPeriod: 10m
  history:
    retention:
      enabled: true
      minimumAge: 45d

# After (8.10, extraConfiguration)
orchestration:
  extraConfiguration:
    - file: application-migrated.yaml
      content: |
        zeebe:
          log:
            level: debug
        camunda:
          cluster:
            partition-count: 3
          data:
            snapshot-period: 10m
            secondary-storage:
              retention:
                enabled: true
                minimum-age: 45d
```

## Render and test the complete configuration

Confirm `values-8.10.yaml` is complete and renders correctly before running the upgrade.

1. Download the default values for the Camunda 8.10 Helm chart:

   ```bash
   helm repo update
   helm show values camunda/camunda-platform --version <CHART_VERSION> > values-8.10-default.yaml
   ```

   To identify the latest available chart version, run:

   ```bash
   helm search repo camunda/camunda-platform --versions
   ```

1. Compare `values-8.10.yaml` with `values-8.10-default.yaml` to identify new options, changed defaults, and deprecated settings.

1. Render the chart locally to catch removed-key and validation errors before upgrading the cluster:

   ```bash
   helm template camunda camunda/camunda-platform \
     --version <CHART_VERSION> \
     -f values-8.10.yaml > /dev/null
   ```

   Rendering checks that the chart accepts your configuration; it doesn't test the deployment against a live cluster.

## Run the Helm upgrade

After updating your values file with the required 8.10 configuration changes, run the Helm upgrade with the Helm v4 CLI:

```bash
helm repo update
helm upgrade camunda camunda/camunda-platform \
  --namespace <NAMESPACE> \
  -f values-8.10.yaml
```

## Monitor and validate the upgrade

After triggering the Helm upgrade, monitor the rollout to ensure all pods return to a healthy state.

### Watch pod rollout progress

```bash
kubectl -n <NAMESPACE> get pods -w
```

You should see pods terminating and restarting with updated images.

### Inspect logs (if required)

```bash
kubectl -n <NAMESPACE> logs <POD_NAME> --previous
```

### Validate the upgrade

1. Confirm all pods are healthy and running `8.10.x` images:

   ```bash
   kubectl -n <NAMESPACE> get pods
   kubectl -n <NAMESPACE> get pods -o jsonpath="{range .items[*]}{.metadata.name}{':\t'}{range .spec.containers[*]}{.image}{'\n'}{end}{end}"
   ```

1. Review the `helm upgrade` output for any `[camunda][warning] DEPRECATION` messages. Each one names a key still to migrate before it is removed in a later major chart version.

1. Verify access to Camunda components, authentication and authorization behavior, and that your workers can still poll and complete jobs.

## Troubleshooting

### Upgrade failed due to missing secrets

If your upgrade fails due to missing credentials, see [Extract plaintext values and reference them as Kubernetes Secrets](/self-managed/deployment/helm/configure/secret-management.md#extract-plaintext-values-and-reference-them-as-kubernetes-secrets). For additional context, see <HelmChartValuesFileBitnamiLegacyLink />.

### Upgrade failed with secondary storage validation error

If Helm fails with a validation error about secondary storage type, set it explicitly:

```yaml
orchestration:
  data:
    secondaryStorage:
      type: elasticsearch # or "opensearch" or "rdbms"
```

Alternatively, if you do not need secondary storage, set `global.noSecondaryStorage: true`.

### Backwards-compatible audiences replace the audience list

The deprecated `orchestration.security.authentication.oidc.backwardsCompatibleAudiences` appended its values to the default audiences, but its target, `camunda.security.authentication.oidc.audiences`, replaces the whole list. If you migrate it verbatim, the broker only accepts your extra audience and rejects the component tokens (`operate-api`, `tasklist-api`, `zeebe-api`, and so on) with `UNAUTHENTICATED: Expected a valid token`. List the full default audience set alongside your backwards-compatible audience in `audiences`.

### Initialization authorizations report "No permissionTypes provided"

If the orchestration pod fails to start with `IdentityInitializationException: Cannot initialize configured authorizations: No permissionTypes provided`, the authorization entry uses the wrong field name. Under `camunda.security.initialization.authorizations`, the permission list field is `permissions`, not `permissionTypes`.

### Custom document store ID

A non-default `global.documentStore.type.inmemory.storeId` (or `aws`/`gcp`) cannot be used through the deprecated key alone: the default store ID is derived from `global.documentStore.activeStoreId` (the store type), never the custom store ID, so the app fails with `Default document store ID does not match any configured document store`. Migrate the whole document configuration to `camunda.document.*` (`default-store-id` plus the store definition) in each document-consuming component's `extraConfiguration`.

### Multi-tenancy with an unprotected API

`camunda.security.multiTenancy.checksEnabled: true` cannot be combined with `camunda.security.authentication.unprotectedApi: true`; the orchestration pod fails with `Multi-tenancy is enabled ... but the API is unprotected`. Protect the API when multi-tenancy is enabled.
